swagger delete
